packages/next-swc/crates/core/tests/errors/next-dynamic/import-as-variable/input.js
import dynamic from 'next/dynamic'

const module = () => import('../components/hello')
const DynamicComponentWithCustomLoading = dynamic(module)
